[package]
authors = ["Madeline Sparkle"]
edition = "2021"
name = "trade-or-slay"
version = "0.1.0"

[dependencies]
generational-arena = "0.2.8"
macroquad = "0.3"
miniquad = "0.3.0-alpha.33"
nalgebra = "*"
rapier2d = {version = "*", features = ["simd-stable"]}

resvg = "0.22.0"
tiny-skia = "0.6.3"
usvg = "0.22.0"

lazy_static = "1.4.0"
